# hdu2025_software_eng_thesis_mgmt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  office_account.sql  package.json  student_2.sql  student_and_topic.sql  vite.config.mts
backend/: .dockerignore  Cargo.toml  README.md
backend/migrations/2026-01-01-083730-0000_import_powerdesigner/: down.sql  up.sql
backend/src/: schema.rs
backend/src/database/: lib.rs  model.rs  schema.rs
backend/src/server/: api.rs  auth.rs  dto.rs  helper.rs  main.rs  model.rs  route.rs
docker/: backend-cargo-static.patch  entrypoint.sh  init.sql
docs/: module-structure.md
docs/api/: thesis_mgmt.yml
docs/archived/backend/: NOTES.md
docs/pd/: CDM.cdb  CDM.cdm  LDM.ldb  LDM.ldm  PDM.pdm  thesis_mgmt.pjb  thesis_mgmt.prj
docs/progress/final/: 测试用例&BUG清单.xlsx  系统演示与讲解.docx  项目总结&个人总结.docx
docs/progress/week_10/: 功能分析表.xlsx  项目周报.docx
docs/progress/week_11/: ER图.drawio  数据库表设计.xlsx  模块结构图.vsdx  项目周报.docx
docs/progress/week_12/: 程序流程图.vsdx  项目周报.docx
docs/progress/week_13/: 项目周报.docx
docs/progress/week_14/: 项目周报.docx
docs/progress/week_15/: 项目周报.docx
docs/progress/week_6/: 业务流程图.vsdx  项目周报.docx  项目计划书.docx
docs/progress/week_7/: 业务流程图.vsdx  数据分析表.xlsx  项目周报.docx
docs/progress/week_8/: 项目周报.docx
docs/progress/week_9/: 项目周报.docx
frontend/: .dockerignore  .env.example  .prettierignore  .prettierrc  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vite.config.mts
frontend/src/: App.vue  components.d.ts  config.ts  typed-router.d.ts
frontend/src/api/: client.ts  constants.ts
frontend/src/components/: DefenseBoardDrawer.vue  HelloWorld.vue  InfoDrawer.vue  OfficeDrawer.vue  StudentDrawer.vue  TeacherDrawer.vue  UserInfoBar.vue
frontend/src/composables/: useSnackbar.ts
frontend/src/pages/: index.vue
frontend/src/plugins/: vuetify.ts
frontend/src/styles/: settings.scss
scripts/: git-hooks-pre-commit
scripts/add_user/: add_user.py
src/: components.d.ts  typed-router.d.ts
src/api/: client.ts  constants.ts  index.ts
src/components/: AppBar.vue  DefenseBoardDrawer.vue  InfoDrawer.vue  OfficeDrawer.vue  StudentDrawer.vue  TeacherDrawer.vue  UserInfoBar.vue
src/pages/: index.vue
src/plugins/: vuetify.ts
(+33 files in other folders)
